[gd_scene load_steps=4 format=3 uid="uid://pib5b0l1i6vf"]

[ext_resource type="Script" uid="uid://dedr5fa6yn25v" path="res://Scripts/UI/level_select.gd" id="1_d0of1"]
[ext_resource type="Theme" uid="uid://cjrb4f2yj7vjw" path="res://UI/MainMenu/MainMenuTheme.tres" id="2_hf7g0"]
[ext_resource type="LabelSettings" uid="uid://baonky01jfi24" path="res://Font/Label.tres" id="3_uipp2"]

[node name="LevelSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d0of1")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.458824)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="TitleContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_hf7g0")

[node name="Title" type="Label" parent="Panel/HBoxContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 45
text = "Choose A Level:
"
label_settings = ExtResource("3_uipp2")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ButtonContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="levelContainer" type="GridContainer" parent="Panel/HBoxContainer/VBoxContainer/ButtonContainer/VBox"]
layout_mode = 2
theme_override_constants/h_separation = 48
theme_override_constants/v_separation = 11

[node name="Level1" type="Button" parent="Panel/HBoxContainer/VBoxContainer/ButtonContainer/VBox/levelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_hf7g0")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_constants/outline_size = 10
text = "Tutorials
"

[node name="Level2" type="Button" parent="Panel/HBoxContainer/VBoxContainer/ButtonContainer/VBox/levelContainer"]
layout_mode = 2
theme = ExtResource("2_hf7g0")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_constants/outline_size = 10
text = "Levels
"

[node name="GoBack" type="Button" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 127.0
offset_top = 286.0
offset_right = 513.0
offset_bottom = 344.0
theme = ExtResource("2_hf7g0")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.775167, 0.29, 1)
theme_override_constants/outline_size = 10
text = "Go Back
"
